--- a/Road to Recovery/pages/menu.html
+++ b/Road to Recovery/pages/menu.html
@@ -44,7 +44,8 @@
 
 
                 <li>
-                    <a title="سجل النظام" href="viewLog.html" class="waves-effect waves-primary">
+                    <!--href need to be viewLog.html-->
+                    <a title="سجل النظام" style=" cursor: not-allowed;"  href="#" class="waves-effect waves-primary">
                         <i>
                             <img src="../../Media/יומן מערכת.png" height="25" width="25" />
                         </i>
