--- a/Road to Recovery/pages/viewVolunteer.html
+++ b/Road to Recovery/pages/viewVolunteer.html
@@ -215,8 +215,8 @@
                             btnStr += " " + reactiveBtn;
                         }
                         else {
-                            deleteBtn = "<div class='btnWrapper-left'><button type='button' class='btn btn-icon waves-effect waves-light btn-danger btn-sm m-b-5' id='remove' title='מחיקה'><i class='fa fa-remove'></i></button></div>";
-                            var messagesBtn = "<div class='btnWrapper-right'><button type='button' class='btn btn-icon waves-effect waves-light btn-light btn-sm m-b-5' id='messages' title='הודעות' data-toggle='modal' data-target='#messagesModal'><i class='fa fa-envelope-o'></i></button></div>";
+                            deleteBtn = "<div class='btnWrapper-left'><button  type='button' class='btn btn-icon waves-effect waves-light btn-danger btn-sm m-b-5' id='remove' title='מחיקה'><i class='fa fa-remove'></i></button></div>";
+                            var messagesBtn = "<div class='btnWrapper-right'><button type='button' disabled class='btn btn-icon waves-effect waves-light btn-light btn-sm m-b-5' id='messages' title='הודעות' data-toggle='modal' data-target='#messagesModal'><i class='fa fa-envelope-o'></i></button></div>";
                             btnStr += messagesBtn;
                         }
                         var cellphone2 = "";
