--- a/Road to Recovery/pages/viewVolunteer.html
+++ b/Road to Recovery/pages/viewVolunteer.html
@@ -447,6 +447,7 @@
 
             $('#datatable-buttons tbody').on('click', '#remove', function () {
                 var data = tbl.row($(this).parents('tr')).data();
+                //console.log('what is data', data);
                 swal({
                     title: "האם אתם בטוחים?",
                     type: "warning",
@@ -457,8 +458,9 @@
                     confirmButtonText: "מחיקה",
                     closeOnConfirm: false
                 }, function () {
-                    deactivateVolunteer(data.DisplayName, 'false');
-                    setTimeout(function () { refreshTable() }, 1001);
+                    beforeDeactiveCheckFutureRides(data);
+                    //deactivateVolunteer(data.DisplayName, 'false');
+                    //setTimeout(function () { refreshTable() }, 1001);
                 });
             });
 
@@ -594,6 +596,47 @@
             location.href = "volunteerForm.html";
         }
 
+        const beforeDeactiveCheckFutureRides = (volunteer) => {
+            $('#wait').show();
+            $.ajax({
+                dataType: "json",
+                url: "WebService.asmx/CheckFutureRides",
+                contentType: "application/json; charset=utf-8",
+                type: "POST",
+                data: JSON.stringify({ volunteerId: volunteer.Id }),
+                success: function (data) {
+
+                    const response = JSON.parse(data.d);
+                    
+                    if (response==0) {
+                        deactivateVolunteer(volunteer.DisplayName, 'false');
+                      setTimeout(function () { refreshTable() }, 1001);
+                    }
+                    else if (response==1) {
+                        swal({
+                            title: "שימו לב !",
+                            type: "warning",
+                            text: "לתשומת ליבך למתנדב זה קיימות נסיעות עתידיות, האם עדיין ברצונך להמשיך בפעולה?",
+                            showCancelButton: true,
+                            cancelButtonText: "בטל",
+                            confirmButtonClass: 'btn-warning',
+                            confirmButtonText: "מחיקה",
+                            closeOnConfirm: false
+                        }, function () {
+                            deactivateVolunteer(volunteer.DisplayName, 'false');
+                            setTimeout(function () { refreshTable() }, 1001);
+                        });
+                    }
+            
+
+                    $('#wait').hide();
+                },
+                error: function (err) {
+                    alert("Error in beforeDeactiveCheckFutureRides: " + err.responseText);
+                    $('#wait').hide();
+                }
+            });
+        }
 
         const ManageAbsenceToggle = () => {
             $('#DocumentedCallsModal').modal('toggle');
