fix absence and volunteer

--- a/Road to Recovery/pages/viewVolunteer.html
+++ b/Road to Recovery/pages/viewVolunteer.html
@@ -217,7 +217,8 @@
                         else {
                             deleteBtn = "<div class='btnWrapper-left'><button  type='button' class='btn btn-icon waves-effect waves-light btn-danger btn-sm m-b-5' id='remove' title='מחיקה'><i class='fa fa-remove'></i></button></div>";
                             var messagesBtn = "<div class='btnWrapper-right'><button type='button' disabled class='btn btn-icon waves-effect waves-light btn-light btn-sm m-b-5' id='messages' title='הודעות' data-toggle='modal' data-target='#messagesModal'><i class='fa fa-envelope-o'></i></button></div>";
-                            btnStr += messagesBtn;
+                            //btnStr += messagesBtn;
+                            // this old button need to be removed acoording to avrahm . 
                         }
                         var cellphone2 = "";
                         if (arr_volunteers[i].CellPhone2 != "") {
